# ef

./: .gitignore  CMakeLists.txt  Config.hpp  Domain.hpp  External_field.cpp  External_field.h  External_magnetic_field.cpp  External_magnetic_field.h  FieldSolver.cu  FieldSolver.cuh  Field_solver.hpp  LICENSE.md  Makefile  Particle.hpp  Particle_source.hpp  Particle_to_mesh_map.hpp  README.md  SpatialMeshCu.cu  SpatialMeshCu.cuh  Spatial_mesh.hpp  Time_grid.hpp  VecNd.hpp  charged_inner_region.cpp  charged_inner_region.h  config.c  config.cpp  config.h  coords  cuda.txt  domain.c  domain.cpp  domain.cu  domain.h  domain_geometry.cpp  domain_geometry.h  epicf.kdev4  epicf_dev.kdev4  extract_data.sh  field_solver.cpp  field_solver.cu  (+43 more)
.kdev4/: epicf.kdev4  epicf_dev.kdev4
doc/: Makefile  bib.bib  common_math.sty  epicf.blg  installation.tex  intro.tex  major.tex  plans.tex  program_structure.tex  user_guide.tex
epicf_libs/: CMakeLists.txt  External_magnetic_field.cpp  External_magnetic_field.h  config.cpp  config.h  domain.cpp  domain.h  field_solver.cpp  field_solver.h  inner_region.cpp  inner_region.h  node_reference.h  particle.h  particle_source.cpp  particle_source.h  particle_to_mesh_map.cpp  particle_to_mesh_map.h  spatial_mesh.cpp  time_grid.cpp  time_grid.h  vec3d.cpp  vec3d.h
examples/2spheres/: conducting_sphere_potential.conf  noparticles.rplot  plot.py  run_example.sh
examples/Bush/: 4D_interp.py  Bush.conf  plot.py  run_example.sh
examples/acceleration_of_ion_in_electron_beam/: Ion Acceleration by Electrons.ipynb  estimates.py  plot_ion_velocity.py  run_example.sh  thermolization.conf
examples/acceleration_of_ion_in_electron_beam_real_particles/: Ion Acceleration by Electrons.ipynb  estimates.py  plot_ion_velocity.py  plot_ion_velocity_hist.py  thermolization.conf
examples/axially_symmetric_beam_contour/: beam_contour.py  contour.conf  estimates.py  run_example.sh
examples/conducting_sphere_potential/: plot.py  (+2 more)
fishpack/: Makefile
freecad/: Commands.py  Init.py  InitGui.py
paraview/: ef.py
plot/: rplot_script.r
test/: cobvert2.py
test2/: 1.txt  Ef_functions.py  cobvert.py  test.conf
(+83 files in other folders)
