project(epicf-master_inner_ab)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_C_FLAGS "-isystem /usr/include/petsc -isystem /usr/include/oce -std=c++11")
set(COMMONLIBS "-lm")
set(BOOSTLIBS "-lboost_program_options")
set(PETSCLIBS "-lpetsc")
set(OPENCASCADELIBS "-lTKXSBase -lTKernel -lTKBRep -lTKMath -lTKSTEP -lTKBool -lTKTopAlgo -lTKPrim")
set(LIBS "${COMMONLIBS} ${BOOSTLIBS} ${PETSCLIBS} ${OPENCASCADELIBS}")
set(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc ${CMAKE_C_FLAGS})
set(CMAKE_C_COMPILER mpicc)
set(CMAKE_CXX_COMPILER mpic++)
add_definitions(${CMAKE_C_FLAGS})
add_subdirectory(epicf_libs)
add_executable (epicf main.cpp)
target_link_libraries (epicf epicflibs mpi ${LIBS})
