project(epicf-master_inner_ab)
cmake_minimum_required(VERSION 2.8)

set(HDF5FLAGS "-I/usr/include/hdf5/serial -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_BSD_SOURCE -D_FORTIFY_SOURCE=2 -g -fstack-protector-strong -Wformat -Werror=format-security")
set(PETSCFLAGS "-isystem /usr/include/petsc")
set(OCEFLAGS "-isystem /usr/include/oce")
set(SUPPRESS_MPI_C11_WARNING "-Wno-literal-suffix")
set(WARNINGS "-Wall -fbounds-check -Warray-bounds -fsanitize=address")
set(CMAKE_C_FLAGS "${HDF5FLAGS} ${PETSCFLAGS} ${OCEFLAGS} -O2 -std=c++11 ${WARNINGS} ${SUPPRESS_MPI_C11_WARNING}")

set(COMMONLIBS "-lm")
set(BOOSTLIBS "-lboost_program_options")
set(PETSCLIBS "-lpetsc")
set(SANITIZER "-lasan")
set(HDF5LIBS "-L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhdf5_hl_cpp -lhdf5_cpp -lhdf5_hl -lhdf5 -Wl,-z,relro -lpthread -lz -ldl -lm -Wl,-rpath -Wl,/usr/lib/x86_64-linux-gnu/hdf5/serial")
set(OPENCASCADELIBS "-lTKXSBase -lTKernel -lTKBRep -lTKMath -lTKSTEP -lTKBool -lTKTopAlgo -lTKPrim")
set(LIBS "${COMMONLIBS} ${BOOSTLIBS} ${PETSCLIBS} ${HDF5LIBS} ${OPENCASCADELIBS} ${SANITIZER}")

set(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc ${CMAKE_C_FLAGS})
set(CMAKE_C_COMPILER mpicc)
set(CMAKE_CXX_COMPILER mpic++)
add_definitions(${CMAKE_C_FLAGS})
add_subdirectory(epicf_libs)
add_executable (epicf main.cpp)
target_link_libraries (epicf epicflibs mpi ${LIBS})
